--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,31 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<div class="container">
+  <form role="amountForm" name="wallet" novalidate>
+    <div class="form-group">
+      <label for="amount">Amount</label>
+      <input type="amount" class="form-control" id="amount" placeholder="Place yout amount" required>
+    </div>
+    <button type="submit" name="addAmount" class="btn btn-success">Add amount</button>
+    <button type="submit" name="removeAmount" class="btn btn btn-danger">Remove Amount</button>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Amount</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="amount in myWallet.amounts">
+          <td>{{amount.date}}</td>
+          <td>{{amount.amount}}</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th>Total amount</th>
+          <td>+2500</td>
+        </tr>
+      </tfoot>
+    </table>
+  </form>
 </div>
