added angular localstorage/fontawesome

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -88,3 +88,12 @@ body {
     border-bottom: 0;
   }
 }
+
+/*Validate*/
+.ng-invalid.ng-dirty{
+  border-color:red;
+}
+
+.ng-valid.ng-dirty{
+  border-color:green;
+}
