--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form role="form" name="wallet" ng-controller="MainCtrl as myWallet" novalidate>
+  <form role="form" name="wallet" ng-controller="FormCtrl" novalidate>
 
     <div class="alert alert-danger" role="alert" ng-show="!wallet.$valid && !wallet.$pristine"> You can use just numbers </div>
     <div class="alert alert-danger" role="alert" ng-show="notFunds">
