--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,30 +14,8 @@
     <button type="submit" name="addAmount" class="btn btn-success" ng-click="wallet.$valid && addAmount('entry')">Add amount</button>
     <button type="submit" name="removeAmount" class="btn btn btn-danger" ng-click="wallet.$valid && addAmount('withdrawal')">Remove Amount</button>
 
-    <div class="alert alert-danger" role="alert" ng-show="">hola</div>
-
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Transaction</th>
-          <th>Amount</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="amount in amounts">
-          <td>{{amount.date | date:"MM/dd/yyyy"}}</td>
-          <td>{{amount.transaction | uppercase }}</td>
-          <td>{{amount.amount | currency}}</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <th colspan="2">Total amount</th>
-          <td><span class="fa fa-usd"> {{totalAmount()}}</span></td>
-        </tr>
-      </tfoot>
-    </table>
+    <!-- Table wallet -->
+    <amounts-table></amounts-table>
   </form>
 
 </div>
