--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,7 +8,7 @@
 
     <div class="form-group">
       <label for="amount">Amount</label>
-      <input type="number" class="form-control" id="amount" ng-model="newAmounts.amount" placeholder="Place yout amount" required>
+      <input type="number" class="form-control" id="amount" ng-model="newAmounts.amount" min="0" placeholder="Place yout amount" required>
     </div>
 
     <button type="submit" name="addAmount" class="btn btn-success" ng-click="wallet.$valid && addAmount('entry')">Add amount</button>
